merge with x-pack plugin